TAG: littriageload-6-0-11-34
DATE: 01/18/2018
STAFF: lec
CHANGES:
1)TR12747/publication type : turn off & fix bug

TAG: littriageload-6-0-11-33
DATE: 12/27/2017
STAFF: lec
CHANGES:
1)TR12747/publication type
2)TR12756/duplicate log

TAG: littriageload-6-0-11-32
DATE: 12/18/2017
STAFF: lec
CHANGES:
1)TR12708/add Lit Triage Supplemental Journal logic

TAG: littriageload-6-0-11-31
TAG: littriageload-6-0-11-30
TAG: littriageload-6-0-11-29
TAG: littriageload-6-0-11-28
TAG: littriageload-6-0-11-27
TAG: littriageload-6-0-11-26
TAG: littriageload-6-0-11-25
DATE: 12/11/2017, 12/12/2017, 12/132017
STAFF: lec
CHANGES:
TR12705/add NLM refresh pipeline
also, pipes in 'title' need to be escaped

TAG: littriageload-6-0-11-24
TAG: littriageload-6-0-11-23
DATE: 12/06/2017
STAFF: lec
CHANGES:
update bib_workflow_status_serial after bcp

TAG: littriageload-6-0-11-22
TAG: littriageload-6-0-11-21
TAG: littriageload-6-0-11-20
TAG: littriageload-6-0-11-19
DATE: 11/30/2017, 12/04/2017
STAFF: lec
CHANGES:
added archiving of 'input' directory

TAG: littriageload-6-0-11-18
DATE: 11/27/2017
STAFF: lec
CHANGES:
TR12732/littriage_update_pdf was not copying file to needs_review folder

TAG: littriageload-6-0-11-17
DATE: 11/20/2017
STAFF: lec
CHANGES:
only run /delete/update if there is something in the SQL files

TAG: littriageload-6-0-11-16
DATE: 11/14/2017
STAFF: lec
CHANGES:
littriageload.sh : 
split up what is send to LOG_FILE and what is sent to LOG_DIAG

TAG: littriageload-6-0-11-15
TAG: littriageload-6-0-11-14
DATE: 11/10/2017
STAFF: lec
CHANGES:
TR12712
1) Abstract : remove pipes in text
2) change supplemental/pdf from "update" to "delete/bcp"
3) check bib_refs/bib_workflow_data counts

TAG: littriageload-6-0-11-13
TAG: littriageload-6-0-11-12
TAG: littriageload-6-0-11-11
TAG: littriageload-6-0-11-10
TAG: littriageload-6-0-11-9
TAG: littriageload-6-0-11-8
TAG: littriageload-6-0-11-7
TAG: littriageload-6-0-11-6
TAG: littriageload-6-0-11-5
TAG: littriageload-6-0-11-4