@@ -13,7 +13,7 @@
 <LI><A HREF="/data/littriage/needs_review">Needs Review PDFs</A>
 <LI><A HREF="/data/loads/mgi/littriageload/">All Logs (current = logs, others = logs.date/time)</A>
 <LI><A HREF="/data/loads/mgi/littriageload/logs/littriageload.diag.log">Diagnostics</A>
-<LI><A HREF="/data/loads/mgi/littriageload/logs/littriageload.error.shtml">Errors</A>
+<LI><A HREF="/data/loads/mgi/littriageload/logs/littriageload.error.shtml">Last Night's Errors</A>
 <LI><A HREF="/data/loads/mgi/littriageload/logs/littriageload.dups.log">Duplicates</A>
 <LI><A HREF="/data/loads/mgi/littriageload/logs/littriageload.pubtype.log">Excluded Publication Types</A>
 </UL>
