@@ -1,3 +1,9 @@
+TAG: littriageload-6-0-11-35
+DATE: 01/18/2018
+STAFF: lec
+CHANGES:
+1)TR12747/publication type : turn on with fix
+
 TAG: littriageload-6-0-11-34
 DATE: 01/18/2018
 STAFF: lec
